// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEditBed Should display add edit bed form properly 1`] = `
<div
  className="main-container"
>
  <fieldset
    className="admission-location-form"
  >
    <legend>
        
      Add
       Bed  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title inline"
          >
            Location:
          </label>
          <span
            id="location-name"
          >
            General Ward
          </span>
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Row:
          </label>
          <input
            id="row-field"
            onChange={[Function]}
            required={true}
            type="number"
            value={1}
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Column:
          </label>
          <input
            id="column-field"
            onChange={[Function]}
            required={true}
            type="number"
            value={2}
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Bed Number:
          </label>
          <input
            id="bed-number-field"
            maxLength={10}
            onChange={[Function]}
            required={true}
            type="text"
            value=""
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Bed Type:
          </label>
          <select
            id="bed-type"
            onChange={[Function]}
            required={true}
            value="deluxe"
          >
            <option
              key="6f9faf08-0fd5-11e8-adb7-080027b38971"
              value="deluxe"
            >
              deluxe
            </option>
            <option
              key="6f9fb240-0fd5-11e8-adb7-080027b38971"
              value="luxury"
            >
              luxury
            </option>
            <option
              key="6f9fb341-0fd5-11e8-adb7-080027b38971"
              value="dbl"
            >
              dbl
            </option>
          </select>
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;

exports[`AddEditBed Should display add edit bed form properly 2`] = `
<div
  className="main-container"
>
  <fieldset
    className="admission-location-form"
  >
    <legend>
        
      Edit
       Bed  
    </legend>
    <div
      className="block-content"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="form-block"
        >
          <label
            className="form-title inline"
          >
            Location:
          </label>
          <span
            id="location-name"
          >
            General Ward
          </span>
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Row:
          </label>
          <input
            id="row-field"
            onChange={[Function]}
            required={true}
            type="number"
            value={2}
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Column:
          </label>
          <input
            id="column-field"
            onChange={[Function]}
            required={true}
            type="number"
            value={1}
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Bed Number:
          </label>
          <input
            id="bed-number-field"
            maxLength={10}
            onChange={[Function]}
            required={true}
            type="text"
            value="100-a"
          />
        </div>
        <div
          className="form-block"
        >
          <label
            className="form-title"
          >
            Bed Type:
          </label>
          <select
            id="bed-type"
            onChange={[Function]}
            required={true}
            value="luxury"
          >
            <option
              key="6f9faf08-0fd5-11e8-adb7-080027b38971"
              value="deluxe"
            >
              deluxe
            </option>
            <option
              key="6f9fb240-0fd5-11e8-adb7-080027b38971"
              value="luxury"
            >
              luxury
            </option>
            <option
              key="6f9fb341-0fd5-11e8-adb7-080027b38971"
              value="dbl"
            >
              dbl
            </option>
          </select>
        </div>
        <div
          className="form-block"
        >
          <input
            className="form-btn float-left margin-right"
            disabled={false}
            name="submit"
            type="submit"
            value="Save"
          />
          <input
            className="form-btn float-left"
            name="cancel"
            onClick={[Function]}
            type="button"
            value="Cancel"
          />
        </div>
      </form>
    </div>
  </fieldset>
</div>
`;
